# news-polygraph_google_scraper

./: .gitignore  api_call_output.json  claim_dataset.csv  draft.py  exp_request_output.json  output.html  pyproject.toml  request_output.json  setup.cfg  similarity_threshold_exp.txt  simplified_client.py  sonar-project.properties  test_scrape.py
.github/: CODEOWNERS
.github/workflows/: check-release.yaml
delphai_scraper_utils/: __init__.py  client.py  deboilerplating.py  metrics.py  utils.py
exp_article_html/: article_0.html  article_1.html  article_10.html  article_11.html  article_2.html  article_3.html  article_4.html  article_5.html  article_6.html  article_8.html
output/: exp_request_output.json  request_output.json
